# Kiddo

./: .env.example  .gitignore  Makefile  README.md  connectors.yaml.example  main.py  pyproject.toml
examples/: gmail_connector_example.py
prompts/: README.md  deadline_extraction.yaml  event_extraction.yaml  mail_to_calendar_extraction.yaml  meeting_extraction.yaml  school_kindergarten_extraction.yaml  sms_summary.yaml
src/: __init__.py  orchestrator.py
src/calendar/: __init__.py  google_calendar.py  ical_provider.py  provider.py
src/config/: __init__.py  connectors_loader.py  env_loader.py  models.py  system_config.py
src/ingestion/: __init__.py  adapters.py  connector.py
src/models/: __init__.py  calendar.py  event.py  notification.py
src/notifications/: __init__.py  channel.py  email_channel.py  engine.py  sms_channel.py
src/processing/: __init__.py  engine.py  extractor.py  llm_service.py  normalizer.py  prompt_manager.py  sms_generator.py
src/queue/: __init__.py  queue.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_gmail_connector.py
